--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "8.2.0",
-    "@angular/common": "^8.2.0",
+    "@angular/common": "8.2.0",
     "@angular/compiler": "^8.2.0",
     "@angular/core": "^8.2.0",
     "@angular/forms": "^8.2.0",
